<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/detail_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/quake"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <ImageView
        android:id="@+id/detail_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toTopOf="@id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/guide_icn" />

    <EditText
        android:id="@+id/detail_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pixel2"
        android:hint="@string/name"
        android:background="@color/gray_back"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@id/detail_image"
        app:layout_constraintStart_toStartOf="@id/detail_image"
        app:layout_constraintTop_toTopOf="@id/guideline2" />

    <TextView
        android:id="@+id/opponent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/pixel2"
        android:text="@string/choose_opponent"
        android:background="@color/gray_back"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline4" />

    <Spinner
        android:id="@+id/detail_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:background="@color/gray_back"
        android:prompt="@string/choose_opponent"
        app:layout_constraintBottom_toBottomOf="@+id/opponent"
        app:layout_constraintStart_toStartOf="@id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <TextView
        android:id="@+id/detail_health"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/pixel2"
        android:text="@string/health"
        android:background="@color/gray_back"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/detail_attack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/opponent" />

    <EditText
        android:id="@+id/detail_health_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/pixel2"
        android:hint="@string/health"
        android:padding="6dp"
        android:textColorHint="@color/black"
        android:background="@color/gray_back"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/detail_health"
        app:layout_constraintStart_toStartOf="@id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/detail_health" />

    <TextView
        android:id="@+id/detail_attack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/pixel2"
        android:text="@string/attack"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:background="@color/gray_back"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        app:layout_constraintBottom_toTopOf="@id/detail_defence"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_health" />

    <EditText
        android:id="@+id/detail_attack_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/pixel2"
        android:hint="@string/attack"
        android:background="@color/gray_back"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:padding="6dp"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/detail_attack"
        app:layout_constraintStart_toStartOf="@id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/detail_attack" />

    <TextView
        android:id="@+id/detail_defence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/pixel2"
        android:text="@string/defence"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:background="@color/gray_back"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        app:layout_constraintBottom_toTopOf="@id/detail_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_attack" />


    <EditText
        android:id="@+id/detail_defence_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/pixel2"
        android:hint="@string/defence"
        android:padding="6dp"
        android:background="@color/gray_back"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/detail_defence"
        app:layout_constraintStart_toStartOf="@id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/detail_defence" />

    <TextView
        android:id="@+id/detail_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/pixel2"
        android:text="@string/info"
        android:textColor="@color/black"
        android:background="@color/gray_back"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/detail_add_avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_defence" />


    <EditText
        android:id="@+id/detail_info_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/pixel2"
        android:padding="6dp"
        android:textColorHint="@color/black"
        android:textSize="18sp"
        android:layout_marginEnd="10dp"
        android:background="@color/gray_back"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/detail_add_avatar"
        app:layout_constraintTop_toTopOf="@+id/detail_info" />

    <Button
        android:visibility="invisible"
        android:id="@+id/detail_button_back"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pixel2"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/detail_start"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/detail_start"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pixel2"
        android:text="@string/start_fight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/detail_button_back"
        app:layout_constraintTop_toTopOf="@+id/detail_button_back" />

    <Button
        android:id="@+id/detail_add_avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/add"
        android:fontFamily="@font/pixel2"
        app:layout_constraintBottom_toTopOf="@+id/detail_button_back"
        app:layout_constraintStart_toStartOf="@id/detail_info"
        app:layout_constraintTop_toBottomOf="@+id/detail_info" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.35" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.5" />

</android.support.constraint.ConstraintLayout>